# test-by-replay

./: readme.md
gui/: README.md  package.json  pnpm-lock.yaml
gui/src-tauri/: Cargo.toml  tauri.conf.json
input_recorder/: Cargo.toml
input_recorder/src/: lib.rs  main.rs
test-by-replay/: package.json
test-by-replay/src-tauri/: Cargo.toml
