[package]
name = "input_recorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.40.0", features = ["json", "parquet"] }
rdev = { version = "0.5.3", features = ["serde", "serialize"] }
serde_json = "1.0.105"
uuid = { version = "1.8.0", features = ["v4"] }
zstd = "0.13.1"
